# awesome-a-stock-openclawskills

./: .gitignore  README.md  sync-config.json
agent-personas/: SKILL.md  _meta.json
capture-30天热点/: READMEzh.md  SKILL.md
capture-arxiv论文热点跟踪/: SKILL.md  Untitled
capture-blogwatcher/: SKILL.md
capture-gangtise/: .env.example  Untitled
capture-gangtise-kb/: .token_cache  SKILL.md
capture-jiucai/: SKILL.md  pyproject.toml
capture-jiucai/a_stock_watcher/: __main__.py  auth.py  cli.py  content_fetcher.py  server.py
capture-jiucai/a_stock_watcher/sources/: action.py
capture-jiucai/scripts/: query_stock.py
capture-reddit-search/: SKILL.md
capture-search-x/: .env.example  SKILL.md
capture-youtube/: .gitignore  SKILL.md
capture-韭菜公社/: .env.example  .gitignore
stock-tushare数据mcp/: .env.example  README.md  SKILL.md  Untitled  _meta.json  pyproject.toml
stock-tushare数据mcp/reference/: output-storage.md  query-patterns.md  tool-index.md
stock-tushare数据mcp/src/tushare_mcp/: __main__.py  client.py  errors.py  server.py  storage.py
stock-tushare数据mcp/src/tushare_mcp/tools/: bond.py  chips.py  data_store.py  etf.py  forex.py  fund.py  futures.py  hk.py  holder.py  index.py  minutes.py  research.py  tdx_board.py  us.py  us_finance.py
stock-tushare数据mcp/tests/: conftest.py  test_client.py  test_client_phase2.py  test_client_phase3.py  test_client_phase4.py  test_client_phase5a.py  test_client_phase5b.py  test_client_phase5c.py  test_client_phase5d1.py  test_client_phase5d2.py  test_client_phase5d3.py  test_formatter.py  test_storage.py
(+233 files in other folders)
