[project]
name = "a-stock-watcher"
version = "0.2.0"
description = "A股主题跟踪 MCP Server - 从九阳公社等平台抓取热点、产业链、异动数据"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "playwright>=1.40.0",
    "aiosqlite>=0.20.0",
    "google-genai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["a_stock_watcher"]
