[project]
name = "tushare-pro-mcp"
version = "0.1.0"
description = "Tushare Pro MCP Server - A股数据 MCP 工具服务"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "tushare>=1.4.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tushare_mcp"]
